Fixed issues with refreshed token persistence. Added moarrrrr logging to help debugging. CSS bug squish on hero background image.

--- a/app/assets/scss/components/_jumbo.scss
+++ b/app/assets/scss/components/_jumbo.scss
@@ -45,7 +45,7 @@
     height: 100vh;
 
     > .background-image {
-      background: url(/img/bikes.jpeg);
+      background-image: url(/img/bikes.jpeg);
     }
   }
 }
